# tokenizers_jni

bindings/java/: Cargo.toml  README.md
bindings/java/src/: lib.rs
bindings/java/src/main/tokenizers-jni/: Cargo.toml  README.md
bindings/java/src/main/tokenizers-jni/src/: glue.rs  helpers.rs  lib.rs
