[package]
name = "tokenizers-jni"
version = "0.21.4"
authors = ["Anthony MOI <m.anthony.moi@gmail.com>", "Morgan FUNTOWICZ <morgan@huggingface.co>"]
edition = "2018"

[dependencies]
jni = "~0.21.1"

[dependencies.tokenizers]
path = "../../tokenizers"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true