[package]
name = "tokenizers-jni"
version = "0.21.4"
authors = ["Anthony MOI <m.anthony.moi@gmail.com>", "Morgan FUNTOWICZ <morgan@huggingface.co>"]
edition = "2018"

[dependencies]
jni = "~0.21.1"

[dependencies.tokenizers]
path = "../../tokenizers"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"     # 最小体积优化（或 "s"）
lto = true          # 链接时优化
codegen-units = 1   # 减少代码生成并行度（提升优化效果）
strip = true        # 自动剥离调试符号（Rust 1.59+）
panic = "abort"     # 禁用 panic 展开（减少异常处理代码）

